# multimodal-review-summarizer

./: LICENSE  README.md  pyproject.toml
notebooks/: 1_data_collection.ipynb  2_image_captioning.ipynb  3_review_summarization.ipynb
