[project]
name = "multimodal-review-summarizer"
version = "0.1.0"
description = "A multimodal LLMs-based approach to summarizing product reviews using image captioning and text analysis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bson>=0.5.10",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "pymongo>=4.15.1",
    "torch>=2.8.0",
    "transformers>=4.56.1",
]
