[project]
name = "multimodal-review-summarizer"
version = "0.1.0"
description = "A multimodal LLMs-based approach to summarizing product reviews using image captioning and text analysis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bson>=0.5.10",
    "matplotlib>=3.10.6",
    "ollama>=0.5.4",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "pymongo>=4.15.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.0",
    "textblob>=0.19.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.1",
]
